# chatbot-platform

./: .env.example  .gitignore  Makefile  Procfile  README.md  architecture.md  docker-compose.yml  pyproject.toml
configs/bots/: am_marketplace.yaml  bi_assistant.yaml  telecom_support.yaml
configs/rag/: collections.yaml  sources.yaml
configs/semantic_layers/: ecommerce.yaml
data/rag_corpus/api_marketplace/: api-lifecycle.md  architecture.md  bulk-onboarding.md  consumer-flow.md  consumption-runtime.md  governance-and-roles.md  overview.md  publishing.md
data/rag_corpus/telecom_policies/: cancellation.md  fair_usage.md  kyc_and_activation.md  refunds_and_billing.md  roaming.md
data/seed/: seed_telecom.py
docs/: api-reference.md  api-signature.md  architecture.md  integration-api.md  partner-api-reference.md  platform-overview.md  production-readiness-handoff.md
docs/interview-prep/: 00-curriculum.md  01-architecture.md  03-rag-fundamentals.md
notebooks/: mcp_demo.ipynb
notebooks/.ipynb_checkpoints/: mcp_demo-checkpoint.ipynb
services/bi_warehouse/: pyproject.toml
services/bi_warehouse/src/bi_warehouse/: __init__.py  db.py  models.py  seed.py
services/mcp_telecom/: .env.example  pyproject.toml
services/mcp_telecom/src/mcp_telecom/: server.py  telecom_client.py  tools.py
services/rag_api/: pyproject.toml
services/rag_api/src/rag_api/: app.py  deps.py  schemas.py
services/rag_api/src/rag_api/routes/: collections.py  health.py  ingest.py  jobs.py  search.py
services/rag_mcp/: pyproject.toml
services/rag_mcp/src/rag_mcp/: rag_client.py  server.py  tools.py
services/telecom_api/: .env.example  pyproject.toml
services/telecom_api/src/telecom_api/: app.py  db.py  seed.py
services/telecom_api/src/telecom_api/routes/: accounts.py  addons.py  billing.py  complaints.py  network.py  plans.py  recharge.py  sim.py  usage.py
src/chatbot/: app.py
src/chatbot/adapters/: __init__.py  json_schema_to_pydantic.py  skill_to_tool.py
src/chatbot/api/: chat.py  documents.py  schemas.py  security.py
src/chatbot/cli/: rag_ingest.py
src/chatbot/core/: bot_config_store.py  chunk_planner.py  conversation_manager.py  guardrails.py  intent_classifier.py  langgraph_orchestrator.py  llm_orchestrator.py  middleware.py  rag_runtime.py  response_formatter.py  state.py  turn_context.py  turn_result.py
src/chatbot/engines/tag_engine/: __init__.py  index_builder.py  pipeline.py  semantic_layer.py  sql_validator.py  summarizer.py
src/chatbot/engines/tool_engine/: mcp_client.py  tool_translator.py
src/chatbot/observability/: logger.py
src/chatbot/persistence/: __init__.py  checkpointer.py  db.py  models.py
src/chatbot/router/: bot_router.py
src/chatbot/skills/: base.py  clarification_skill.py  rag_skill.py  tag_skill.py  tool_call_skill.py
src/chatbot/static/: chat.js  index.html  style.css
src/mcp_servers/telecom/: server.py  tools.py
src/rag_engine/: __init__.py  config.py  engine.py  models.py
src/rag_engine/chunking/: __init__.py  auto.py  base.py  llm_router.py  planner.py  recursive.py  structural.py
src/rag_engine/connectors/: __init__.py  base.py  confluence.py  file_loader.py  notion.py  registry.py
src/rag_engine/embeddings/: __init__.py  azure_openai.py  base.py
src/rag_engine/ingestion/: __init__.py  dedupe.py  loaders.py  pipeline.py
src/rag_engine/jobs/: __init__.py  queue.py  runner.py  store.py
src/rag_engine/retrieval/: __init__.py  reranker.py  retriever.py
src/rag_engine/scheduler/: __init__.py  runs.py  scheduler.py
src/rag_engine/storage/: db.py  models.py
src/rag_engine/storage/blobs/: __init__.py  base.py  local.py  s3.py
src/rag_engine/tenancy/: resolver.py
src/rag_engine/vector_store/: __init__.py  base.py  chroma_store.py  milvus_store.py
src/telecom_api/: app.py  db.py  models.py
src/telecom_api/routes/: accounts.py  addons.py  billing.py  complaints.py  network.py  plans.py  recharge.py  sim.py  usage.py
tests/: conftest.py  test_chat_history.py  test_clarification.py  test_conversation_persistence.py  test_mcp_tools.py  test_middleware.py  test_reasoning_models.py  test_tag_pipeline.py  test_tag_sql_validator.py  test_telecom_api.py  test_thread_repair.py  test_tool_translator.py
tests/rag/: conftest.py  test_chunker.py  test_config_yaml.py  test_connectors.py  test_dedupe.py  test_document_crud.py  test_engine_facade.py  test_rag_api_integration.py  test_rag_skill.py  test_tenancy.py  test_vector_store_chroma.py
