[project]
name = "chatbot-platform"
version = "0.1.0"
description = "Generalized chatbot platform — telecom POC (Tool Call Skill via MCP)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "openai>=1.50",
    "mcp>=1.2",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "honcho>=2.0",
    "jupyter>=1.0",
]
notebook = [
    "jupyterlab>=4.0",
    "ipykernel>=6.29",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
