[project]
name = "chatbot-platform"
version = "0.1.0"
description = "Generalized chatbot platform — telecom POC (Tool Call Skill via MCP)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "openai>=1.50",
    "mcp>=1.2",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    # LangGraph orchestration stack
    "langgraph>=0.2.50",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0",
    # LlamaIndex NL-SQL stack
    "llama-index-core>=0.12",
    "llama-index-llms-azure-openai>=0.3",
    "llama-index-embeddings-azure-openai>=0.3",
    # SQL safety for TAG
    "sqlglot>=25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "honcho>=2.0",
    "jupyter>=1.0",
]
notebook = [
    "jupyterlab>=4.0",
    "ipykernel>=6.29",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["chatbot*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
