[project]
name = "chatbot-platform"
version = "0.1.0"
description = "Generalized, config-driven chatbot platform (RAG, tool-call, NL→SQL skills)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    # Required by FastAPI to parse multipart/form-data (the document file-upload
    # endpoint, POST /bots/{bot_id}/documents/upload).
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.32",
    "openai>=1.50",
    "mcp>=1.2",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    # Postgres is the production relational backend (sessions, messages,
    # turn_logs, RAG control plane). asyncpg is the async SQLAlchemy driver;
    # SQLite stays available for zero-infra local runs by leaving the URLs as-is.
    "asyncpg>=0.29",
    # Milvus is the production vector backend. pymilvus bundles Milvus Lite
    # (embedded, file-backed) for local/dev/tests; the same client talks to a
    # real Milvus cluster in prod via MILVUS_URI.
    "pymilvus>=2.4",
    "pypdf>=4.0",
    # Word .docx text extraction for the document-upload API.
    "python-docx>=1.1",
    # S3 client for the MinIO/S3 document blob store (RAG_BLOB_BACKEND=s3):
    # object put/get/delete + presigned download links.
    "boto3>=1.34",
    "apscheduler>=3.10",
    # LangGraph orchestration stack
    "langgraph>=0.2.50",
    "langchain>=1.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0",
    # Postgres checkpointer for LangGraph conversation state. psycopg[binary]
    # ships a self-contained libpq so it works on a laptop with no system libpq.
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary,pool]>=3.2",
    # LlamaIndex NL-SQL stack
    "llama-index-core>=0.12",
    "llama-index-llms-azure-openai>=0.3",
    "llama-index-embeddings-azure-openai>=0.3",
    # SQL safety for TAG
    "sqlglot>=25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "honcho>=2.0",
    # Embedded Milvus engine — used by the RAG tests and the zero-infra
    # MILVUS_URI=*.db fallback. Linux/macOS only (no Windows wheels), so it's
    # marked accordingly and kept out of the base deps (prod points MILVUS_URI
    # at a real Milvus server, which needs only pymilvus).
    "milvus-lite>=2.4; sys_platform != 'win32'",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["chatbot*", "rag_engine*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
