[project]
name = "mcp-telecom"
version = "0.1.0"
description = "MCP server wrapping the telecom REST API as 14 MCP tools."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
mcp-telecom = "mcp_telecom.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
