[project]
name = "rag-mcp"
version = "0.1.0"
description = "MCP server exposing RAG search as LLM-callable tools."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
rag-mcp = "rag_mcp.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
