[project]
name = "telecom-api"
version = "0.1.0"
description = "Mock telecom REST API for the chatbot-platform POC."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
]

[project.scripts]
telecom-api = "telecom_api.app:run"
telecom-seed = "telecom_api.seed:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
